traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:1: error: ';' expected but identifier found.
}Aoverride def run() {
 ^